# corvus

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
scripts/: smoke-test.sh
tests/: conftest.py  test_generation.py  test_hypothesis.py
{{cookiecutter.project_slug}}/: .dvcignore  .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.claude/skills/: MANIFEST.yaml  README.md
{{cookiecutter.project_slug}}/.claude/skills/python-quality/stub-package/: SKILL.md
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst
{{cookiecutter.project_slug}}/notebooks/: 00-exploration.ipynb
{{cookiecutter.project_slug}}/scripts/: install-skills.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  config.py  logging.py  tracking.py
{{cookiecutter.project_slug}}/tests/: test_placeholder.py
